tests/NormalTests/paczka1/fuzzy1/24508777.err
Error in line 5: Fo7dHl A999 33,9
Error in line 8: u1TbZ A739 40,5
Error in line 7: OHU A961 64,9
Error in line 15: qUc S769 57,9
Error in line 21: qUc A739 75,0
Error in line 27: qUc A961 14,4
